Create simple logic to recognize text from image and photo. Parsing ingredients to table view. Create simple design

--- a/BeautyHelper/Resources/Info.plist
+++ b/BeautyHelper/Resources/Info.plist
@@ -15,11 +15,13 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Please allow access))</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Camera usage description</string>
 </dict>
 </plist>
